--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@types/typed.js": "^2.0.9",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "typed.js": "^2.0.16"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
